testsuite/tests/dependent/should_fail/T15308.stderr

T15308.hs:12:5: error:
    • No instance for (Show (Foo a f)) required by a use of ‘show’
    • In the expression: show
      In an equation for ‘f’: f = show
